# Home-based-Security-System

./: .gitignore  CMakeLists.txt  LICENSE  README.md
config/: ai_model_config.json  network_config.json  security_policies.json  system_config.json
firmware/: CMakeLists.txt
models/: README.md
scripts/: build.sh  deploy.sh  flash_firmware.sh
src/: CMakeLists.txt
src/ai_ml/: CMakeLists.txt
src/biometrics/: CMakeLists.txt  fingerprint_scanner.cpp  fingerprint_scanner.h  multimodal_fusion.cpp  multimodal_fusion.h  palm_print_analyzer.cpp  palm_print_analyzer.h  vein_pattern_detector.cpp  vein_pattern_detector.h
src/communication/: CMakeLists.txt
src/computer_vision/: CMakeLists.txt  edge_detection.cpp  edge_detection.h  image_preprocessor.cpp  image_preprocessor.h
src/core/: CMakeLists.txt
src/hardware_interface/: CMakeLists.txt
src/security/: CMakeLists.txt
src/ui/: CMakeLists.txt
src/utils/: CMakeLists.txt  logger.cpp  logger.h
tests/: CMakeLists.txt
